# telegram-scrapper

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/: config.py
src/scrapper/: service.py  utils.py
